# federated-learning-cloud

./: .dockerignore  Dockerfile  ReadMe.md  flower_client.py  flower_server.py  load.py  pyproject.toml  requirements.txt  settings.py  task.py
