[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfexample"
version = "1.0.0"
description = "Federated Learning with Tensorflow/Keras and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flower_server:app"
clientapp = "flower_client:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 3
batch-size = 4
learning-rate = 0.001
fraction-fit = 0.5
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.federations.cloud-deployment]
address = "medportal-aggregator-lb-19961353441ae800.elb.us-east-2.amazonaws.com:9093"
insecure = true